--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                     <div class="card-container">
                         <!-- Card Izquierda con Experiencia -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-4">💡 Desarrollador Web Full Stack</h1> <br>
+                            <h1 class="text-display mb-4">💡 Experiencia Laboral</h1>
+                            <h2 class="text-xs mb-2">💡 Desarrollador Web Full Stack</h2>
+                            <br>
                             <small class="block mb-4 flex items-center gap-2">
                                 <span>📍 Macro (BMA)</span>
                                 <img src="/images/logo.bma.jpg" alt="Banco Macro Logo"
@@ -142,7 +144,8 @@
 
                         <!-- Card Derecha -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-4">💡 Desarrollador del Brandbook en Zeroheight</h1>
+                            <h1 class="text-display mb-4">💡 Experiencia Laboral</h1>
+                            <h2 class="text-xs mb-2">💡 Desarrollador del Brandbook en Zeroheight</h2>
                             <small class="block mb-4 flex items-center gap-2">
                                 <span>📍 Macro</span>
                                 <img src="/images/macro.png" alt="Banco Macro Logo"
@@ -250,7 +253,8 @@
                         <!-- Card Izquierda  -->
                         <!-- Card Coordinador de Proyectos -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-4">💡 Coordinador de Proyectos</h1>
+                            <h1 class="text-display mb-4">💡 Experiencia Laboral</h1>
+                            <h2 class="text-xs mb-2">💡 Coordinador de Proyectos</h2>
                             <small class="block mb-4 flex items-center gap-2">
                                 <span>📍 Ediciones Logos</span>
                                 <img src="/images/logos.jpg" alt="Ediciones Logos Logo"
