--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
                     <div class="card-sub bg-color-1 text-black fade-in p-6">
                         <h1 class="text-display mb-4">💡 Objetivo profesional 👇</h1>
                         <ul class="text-xs space-y-2">
+                              <li>✔️ Actualmente estoy perfeccionandome en el Front-End.
+                            </li>
                             <li>✔️ Soy un desarrollador web full stack apasionado por la tecnología y la innovación.
                             </li>
+                          
                             <li>✔️ Estoy en plena formación, desarrollando aplicaciones modernas y
                                 eficientes.</li>
                             <li>✔️ Aplico buenas prácticas y metodologías ágiles para construir soluciones óptimas.</li>
