--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <span class="hover-glow rounded text-black d-flex flex-column">
                     <span class="fs-5 text-center">Juan Carlos Fedyna</span>
                     <small class="text-sm" style="font-weight: normal; font-size: 0.75rem; color: #222;">
-                        Full Stack Developer | React & Node.js
+                        Front-End | Full Stack Developer | React & Node.js
                     </small>
                 </span>
 
