--- a/index.html
+++ b/index.html
@@ -316,9 +316,9 @@
                     <div class="card-container">
                         <!-- Card Izquierda  -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-2">💡 Especialista en Ventas</h1>
+                            <h1 class="text-display mb-2">💡 Gerente</h1>
                             <small class="block mb-4 flex items-center gap-2">
-                                <span>📍 Librería Córdoba</span>
+                                <span>📍 Agape Libros</span>
                                 <!-- <img src="/images/logo-libreria.jpg" alt="Logo Librería Córdoba"
                                     style="width:30px; height:20px; object-fit: contain; border-radius: 12px;" /> -->
                                 <span>| 🗓️ Mar. 2022 - Oct. 2023</span>
@@ -341,7 +341,7 @@
 
                         <!-- Card Derecha -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-2">💡 Especialista en Ventas Minoristas</h1>
+                            <h1 class="text-display mb-2">💡 Gerente</h1>
                             <small class="block mb-4 flex items-center gap-2">
                                 <span>📍 Ágape Libros</span>
                                 <span>| 🗓️ Feb. 2016 - Mar. 2019</span>
@@ -373,7 +373,7 @@
                     <div class="card-container">
                         <!-- Card Izquierda -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-2">💡 Atención al Cliente</h1>
+                            <h1 class="text-display mb-2">💡 Sub Gerente</h1>
                             <small class="block mb-4 flex items-center gap-2">
                                 <span>📍 Cúspide Libros</span>
                                 <span>| 🗓️ Abr. 2015 - Ene. 2016</span>
@@ -398,7 +398,7 @@
 
                         <!-- Card Derecha -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-2">💡 Librero</h1>
+                            <h1 class="text-display mb-2">💡 Gerente</h1>
                             <small class="block mb-4 flex items-center gap-2">
                                 <span>📍 Ágape Libros</span>
                                 <span>| 🗓️ Jul. 2012 - Abr. 2015</span>
@@ -427,7 +427,7 @@
                     <div class="card-container">
                         <!-- Card Izquierda -->
                         <div class="card-sub bg-color-1 text-black fade-in p-6">
-                            <h1 class="text-display mb-2">💡 Especialista en Ventas</h1>
+                            <h1 class="text-display mb-2">💡 Gerente</h1>
                             <small class="block mb-4 flex items-center gap-2">
                                 <span>📍 Ágape-Devoto</span>
                                 <span>| 🗓️ Ene. 2009 - Mar. 2012</span>
